# prov-gigapath

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt
data/: .gitignore
dataset_csv/PANDA/: PANDA.csv  test_0.csv  train_0.csv  val_0.csv
dataset_csv/mutation/: LUAD-5-gene_TCGA.csv
demo/: 1_slide_mpp_check.py  2_tiling_demo.py  3_load_tile_encoder.py  4_load_slide_encoder.py  gigapath_pca_visualization_timm.ipynb  load_slide_encoder.py  load_tile_encoder.py  run_gigapath.ipynb
docs/: clarification_dinov2.md
finetune/: main.py  metrics.py  params.py  training.py  utils.py
finetune/datasets/: slide_datatset.py
finetune/task_configs/: mutation_5_gene.yaml  panda.yaml  utils.py
gigapath/: classification_head.py  pipeline.py  pos_embed.py  slide_encoder.py
gigapath/preprocessing/: preprocessing.md
gigapath/preprocessing/data/: box_utils.py  create_tiles_dataset.py  foreground_segmentation.py  slide_utils.py  tiling.py
gigapath/torchscale/component/: custom_dilated_attention.py  custom_flash_attention.py  custom_multihead_attention.py
gigapath/torchscale/model/: LongNet.py  LongNetConfig.py
images/: prov_normal_000_1.pt
linear_probe/: main.py
scripts/: run_panda.sh  run_pcam.sh
